[BOTF-267] Issues with the main page wrap on login page
## [BOTF-267] Description
The login page is a no-scroll page. that was the issue, it was getting scroll.

--- a/src/components/content/home/binanceIntegration/BinanceIntegration.scss
+++ b/src/components/content/home/binanceIntegration/BinanceIntegration.scss
@@ -1,4 +1,6 @@
 .binance-integration {
+   background: $grad-dark-primary;
+
    .section-header {
       &.dark-header {
          .container {
