--- a/src/components/content/home/chooseBot/ChooseBot.scss
+++ b/src/components/content/home/chooseBot/ChooseBot.scss
@@ -1,5 +1,6 @@
 .choose-bot {
    overflow: hidden;
+   background: $grad-dark-primary;
 
    .section-header {
       .pilot-logo {
