--- a/src/templates/basePage/BasePage.scss
+++ b/src/templates/basePage/BasePage.scss
@@ -25,9 +25,6 @@ header {
 }
 
 .base-page {
-   position: relative;
-   min-height: 100vh;
-
    &.auth-page {
       .page-content {
          padding-top: 3rem;
